# neuton-nordic-thingy53-ble-remotecontrol

./: CMakeLists.txt  README.md
src/: app_version.h  inference_postprocessing.h  main.c
src/nrf_edgeai_lib/: README.md
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/: nrf_edgeai.h  nrf_edgeai_ctypes.h  nrf_edgeai_debug.h  nrf_edgeai_macro.h  nrf_edgeai_platform.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/: nrf_dsp.h  nrf_dsp_fast_math.h  nrf_dsp_spectral.h  nrf_dsp_statistic.h  nrf_dsp_support.h  nrf_dsp_transform.h  nrf_dsp_types.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/fast_math/: nrf_dsp_cmplx_math.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/platform/: nrf_dsp_platform.h  nrf_dsp_platform_debug.h  nrf_dsp_platform_types.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/private/: nrf_dsp_c_intrinsics.h  nrf_dsp_defs.h  nrf_dsp_mem.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/spectral/: nrf_dsp_findpeaks.h  nrf_dsp_freq_snr.h  nrf_dsp_freq_thd.h  nrf_dsp_spectral_centroid.h  nrf_dsp_spectral_spread.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/dsp/statistic/: nrf_dsp_absmax.h  (+35 more)
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/nn/: nrf_nn.h
src/nrf_edgeai_lib/nrf_edgeai/include/nrf_edgeai/rt/: nrf_edgeai_dsp_pipeline_types.h  nrf_edgeai_input_types.h  nrf_edgeai_model_types.h  nrf_edgeai_output_types.h  nrf_edgeai_runtime.h  nrf_edgeai_types.h
src/nrf_edgeai_lib/nrf_edgeai_generated/: CMakeLists.txt  README.md  nrf_edgeai_user_model.c  nrf_edgeai_user_model.h  nrf_edgeai_user_types.h
(+32 files in other folders)
